Recover lost changes
* naming convention followed.

Signed-off-by: Chetan <chetankumar.h.239@gmail.com>

* Fix Surefire plugin to resolve fork error in mock-abis

Signed-off-by: Chetan <chetankumar.h.239@gmail.com>

---------

Signed-off-by: Chetan <chetankumar.h.239@gmail.com>